# near-handshake

./: Cargo.toml  LICENSE  README.md  build.rs
src/: README.md  main.rs
src/connection/: generic_connection.rs  mod.rs  tcp_connection.rs  tests.rs
src/network_protocol/: edge.rs  handshake.rs  mod.rs  peer.rs
src/network_protocol/proto/: LICENSE
