[package]
name = "near-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf-codegen = "3.0.1"
anyhow = "1.0.62"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
borsh = { version = "0.9", features = ["rc"] }
protobuf = "3.0.1"
near-primitives = "0.15.0"
near-crypto = "0.15.0"
clap = { version = "4.0.27", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
